fixes: 1) lg and higher screens w-1/2 screen. (avoids stretching out of proportion). 2) Drag & Drop box fixed to accept. 3) Added screens sizes. 4) cleaned css

--- a/src/index.css
+++ b/src/index.css
@@ -4,23 +4,44 @@
 
 body {
   margin: 0;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Nunito', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 .select-box {
   width: 100%;
-  height: 40px;
-  padding: 8px;
-  font-size: 12px;
-  border: 2px solid #cbd5e0;
+  height: 30px;
+  padding: 4px;
+  font-size: 10px;
+  border: 2px solid #d1d5db;
   border-radius: 0.5rem;
   background-color: white;
 }
 
+.select-box option {
+  padding: 4px;
+  background-color: white;
+  font-size: 10px;
+  color: #333;
+}
+
+.select-box:hover,
+.select-box:focus {
+  border-color: #1f3f6c;
+  outline: none;
+}
+
+@media (max-width: 308px) {
+  .select-box {
+    width: full;
+  }
+}
+
 .select-box::-ms-expand {
-  display: none;
+  display: block;
+  margin: 'auto';
+  width: '50px';
 }
 
 .testing-center > div {
@@ -31,43 +52,6 @@ body {
   background-color: #f0f0f0;
 }
 
-#default-checkbox {
-  display: none;
-}
-
 input[type='radio'] {
   accent-color: #172554;
-}
-
-#default-checkbox + label {
-  transition: background-color 0.3s, border-color 0.3s;
-}
-
-#default-checkbox:checked + label {
-  background-color: transparent;
-  border-color: transparent;
-}
-
-#default-checkbox:checked + label svg {
-  display: block;
-}
-
-.font-superbold {
-  font-weight: 900;
-}
-
-#default-checkbox:checked + label::before {
-  content: '';
-  position: absolute;
-  width: 90%;
-  height: 90%;
-  background-color: #4299e1;
-  border-radius: 50%;
-  top: 5%;
-  left: 5%;
-  transition: background-color 0.3s;
-}
-
-#default-checkbox + label svg {
-  display: none;
 }
